Add program-specific copy to client confirmation email (#213)
[#177892420]

Co-authored-by: Andrew Edstrom <aedstrom@codeforamerica.org>